# mppfc

./: LICENSE  README.md  pyproject.toml
dev/: inheritance.py
doc/: file_access_time.md
examples/: example1.py  example_minimal.py  full.py  live_update.ipynb  minimal.py  pitfalls.py  simple.ipynb
mppfc/: __init__.py  cache.py  mppfc.py
test/: dev.py  dev_file_access_time.py  dev_shelve_vs_directories.py  test_cache.py  test_mppfc.py
