[tool.poetry]
name = "mppfc"
version = "1.1.0"
description = "multi-processing persistent function cache"
authors = ["Richard Hartmann <richard_hartmann@gmx.de>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
binfootprint = "^1.0.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.6.0"
numpy = "^1.22.0"
notebook = "^6.5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
